--- a/index.html
+++ b/index.html
@@ -7,10 +7,46 @@
     <title>Zoom</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
+
 <body>
-    
+
+    <!-- header -->
+    <header class="debug flex fixed-top">
+
+        <div class="view flex">
+            <div class="speaker-view flex">
+                <i class="fas fa-th"></i>
+                <p>Speaker View</p>
+            </div>
+
+            <div class="expand-view flex">
+                <i class="fas fa-expand-arrows-alt"></i>
+            </div>
+        </div>
+
+    </header>
+    <!-- fine header -->
+
+
+
+    <!-- main -->
+    <main class="debug flex margin-top-80px margin-bottom-150px">
+
+    </main>
+    <!-- fine main -->
+
+
+
+    <!-- footer -->
+    <footer class="debug flex fixed-bottom">
+
+    </footer>
+    <!-- fine footer -->
+
 </body>
 
 </html>
