footer work-in-progress

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header -->
     <header class="debug flex fixed-top">
 
-        <div class="view flex">
+        <div class="view flex font-size-0_8em">
             <div class="speaker-view flex">
                 <i class="fas fa-th"></i>
                 <p>Speaker View</p>
@@ -34,7 +34,7 @@
 
 
     <!-- main -->
-    <main class="debug flex margin-top-80px margin-bottom-150px">
+    <main class="debug flex margin-top-50px margin-bottom-100px">
 
     </main>
     <!-- fine main -->
@@ -43,6 +43,85 @@
 
     <!-- footer -->
     <footer class="debug flex fixed-bottom">
+
+        <!-- menu a sinistra -->
+        <nav class="flex nav-left">
+
+            <div class="flex">
+                <div>
+                    <i class="font-size-2em fas fa-microphone"></i>
+                    <p>Mute</p>
+                </div>
+
+                <i class="font-size-0_6em fas fa-chevron-up"></i>
+            </div>
+
+            <div class="flex">
+                <div>
+                    <i class="font-size-2em fas fa-video"></i>
+                    <p>Stop Video</p>
+                </div>
+                
+                <i class="font-size-0_6em fas fa-chevron-up"></i>
+            </div>
+        </nav>
+        <!-- fine menu a sinistra -->
+
+
+        <!-- menu principale -->
+        <nav class="flex nav-main">
+            <div>
+                <i class="font-size-2em fas fa-user-plus"></i>
+                <p>Invite</p>
+            </div>
+
+            <div>
+                <i class="font-size-2em fas fa-user-friends"></i>
+                <p>Manage Partecipants</p>
+            </div>
+
+            <div>
+                <i class="font-size-2em fas fa-chart-bar"></i>
+                <p>Polling</p>
+            </div>
+
+            <div >
+                <div>
+                    <i id="green-icon" class="font-size-2em fas fa-share-square"></i>
+                    <p>Share Screen</p>
+                </div>
+                
+                <i class="font-size-0_6em fas fa-chevron-up"></i>
+            </div>
+
+            <div>
+                <i class="font-size-2em fas fa-comment"></i>
+                <p>Chat</p>
+            </div>
+
+            <div>
+                <i class="font-size-2em fas fa-record-vinyl"></i>
+                <p>Record</p>
+            </div>
+
+            <div>
+                <i class="font-size-2em fas fa-th-large"></i>
+                <p>Breakout Rooms</p>
+            </div>
+
+            <div>
+                <i class="font-size-2em fas fa-ellipsis-h"></i>
+                <p>More</p>
+            </div>
+        </nav>
+        <!-- fine menu principale -->
+
+
+        <!-- bottone end-meeting -->
+        <div class="flex flex-center end-meeting">
+            <p class="font-size-0_8em">End meeting</p>
+        </div>
+        <!-- fine bottone end-meeting -->
 
     </footer>
     <!-- fine footer -->
